fixed contrast issue in header

--- a/projects/krunchy-cookie/css/small.css
+++ b/projects/krunchy-cookie/css/small.css
@@ -9,6 +9,7 @@ header {
     color: #0D0000;
 }
     header h1, header p { margin: 0; }
+    header p { color: #e0d6d6; }
 
 /* nav styling */
 nav ul { margin: 0; padding: 0; }
